public/tuiter/explore/index.css
.wd-global {
    margin-left: 16px;
    background-color: black;
    font-family: Arial, Helvetica, sans-serif;
}

/* A class */

.wd-search-borders {
    border-top: rgb(47, 51, 54) solid 2px;
    border-left: rgb(47, 51, 54) solid 2px;
    border-right: rgb(47, 51, 54) solid 2px;
}

.wd-searchbar {
    margin-left: 16px;
    color: white;
    background-color: #3b3b3b;
    border-radius: 50px;
    border: none;
    margin-top: 5px;
    padding: 7px;
    width: 80%;
}

.wd-settings {
    float: right;
    margin-top: 5px;
    padding-right: 12px;
    width: 22px;
    height: 22px;
}

/* B class */

.wd-hyperlink-boarders {
    border-bottom: rgb(47, 51, 54) solid 2px;
    border-left: rgb(47, 51, 54) solid 2px;
    border-right: rgb(47, 51, 54) solid 2px;
    padding: 16px;
}

.wd-hyperlink {
    color: rgb(110, 118, 125);
    font-size: 15px;
    padding: 16px;
    width: 15%;
    text-decoration: none;
}

.wd-hyperlink-first {
    color: rgb(29, 161, 242);
    border-bottom-style: solid;
    border-bottom-color: rgb(29, 161, 242);
}

.wd-white-bold-text {
    margin-left: 16px;
    color: white;
    font-weight: bold;
}

.wd-post-boarders {
    border-style: solid;
    border-color: rgb(47, 51, 54);
    padding: 3px;
}

.wd-text-padding {
    padding: 2px;
}

.wd-make-flex {
    display: flex;
}

.wd-big-text {
    font-size: 15px;
}

.wd-small-text {
    font-size: 13px;
}

.wd-inline-block-display {
    display: inline-block;
}

.wd-grey-text {
    margin-left: 16px;
    color: rgb(110, 118, 125);
}

.wd-50-percent {
    width: 50%;
}

.wd-move-right {
    float: right;
}

.wd-image {
    padding: 16px;
    width: 100px;
    height: 100px;
    border-radius: 30px;
    object-fit: cover;
}

